Consent modal displays correctly on mobile

--- a/nodes/public/stylesheets/style.css
+++ b/nodes/public/stylesheets/style.css
@@ -845,3 +845,7 @@ body {
 .greyed-out {
   opacity: 0.25;
 }
+
+.modal-content {
+  border: none;
+}
